[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bodosql"
dynamic = ["version"]
description = "Bodo's Vectorized SQL execution engine for clusters"
readme = "README_pypi.md"
requires-python = ">=3.10,<3.13"
keywords = ["data", "analytics", "cluster"]
authors = [{ name = "Bodo.ai" }]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: System :: Distributed Computing",
]

dependencies = ["py4j==0.10.9.7"]

[project.urls]
Homepage = "https://bodo.ai"
Documentation = "https://docs.bodo.ai"

[tool.setuptools.packages.find]
where = ["."]
include = ["bodosql*"]
exclude = ["*tests*"]

[tool.setuptools.package-data]
bodosql = ["jars/*.jar", "opensource/*.NOTICE"]

[tool.setuptools.exclude-package-data]
bodosql =["pytest.ini", "runtests*", "tests*"]

[tool.setuptools_scm]
root = ".."
