[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bodo-azurefs-sas-token-provider"
version = "1.0"
description = "Bodo's customer SAS token provider"
requires-python = ">=3.10,<3.13"
keywords = ["data", "analytics", "cluster"]
authors = [{ name = "Bodo.ai" }]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: System :: Distributed Computing",
]


[project.urls]
Homepage = "https://bodo.ai"
Documentation = "https://docs.bodo.ai"

[tool.setuptools]
packages = ["bodo_azurefs_sas_token_provider"]
